--- a/css/diseño.css
+++ b/css/diseño.css
@@ -51,6 +51,7 @@
     top: 0;
     background: #023877;
     padding: 0px 25px;
+    z-index:3;
   }
   .menu{
     max-width: 1200px;
@@ -189,7 +190,7 @@
         padding: 20px 60px 20px 20px;
         border-radius: 3px;
         position: sticky;
-        top: 55px;
+        top: 80px;
         z-index: 2;
         display: block;
         box-shadow: 5px 5px 4px #162635, -5px -5px 4px #6b8196;
